# routes/api.php
@@ -1,5 +1,7 @@
 <?php
 
+
+use App\Http\Controllers\API\SearchController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -20,6 +22,9 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 // prefix 로 버전 붙이기
 Route::prefix(env('APP_VERSION') . '/')->group(function() {
+
+    Route::get('todos/search', SearchController::class)->name('todos.search');
+
     Route::apiResource('todos', \App\Http\Controllers\API\TodoController::class);
 });
 
